<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".EditAlunoActivity">

        <TextView
            android:id="@+id/textViewAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="92dp"
            android:text="@string/alunos"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imgBtnVoltar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="17dp"
            android:background="#00FFFFFF"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator" />


        <Button
            android:id="@+id/btnSalvarAluno"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="283dp"
            android:layout_height="56dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/cinza"
            android:elevation="3dp"
            android:text="@string/salvar"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/roxo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneInput"
            app:strokeColor="@color/roxo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomeAlunoInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/nome"
            app:boxStrokeColor="@color/roxo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAluno">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpfInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/cpf"
            app:boxStrokeColor="@color/roxo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeAlunoInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/roxo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpfInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefoneInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/tel"
            app:boxStrokeColor="@color/roxo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/cursosSpinner"
            android:layout_width="343dp"
            android:layout_height="49dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>